Add fix for IntelliJ Compiler error to readme